--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
     <h1>Benvingut 2022</h1>
     <p>Aquest any vaig a atendre classe i fer tots els exercicis</p>
+    <p>Web realitzada per Iván Berjillos</p>
+    <p>Enllaç amb la meua web <a href="https://berji09.github.io/web2022/">aquí</a> </p>
+
 </body>
 </html>
